--- a/ClientSide/src/app/components/shop/shop.component.html
+++ b/ClientSide/src/app/components/shop/shop.component.html
@@ -127,7 +127,7 @@
                   <div class="d-flex align-items-center justify-content-between mb-4">
                       <form action="">
                           <div class="input-group">
-                              <input type="text" class="form-control" placeholder="Search by name">
+                              <input type="text" class="form-control" placeholder="Search by name" #filter>
                               <div class="input-group-append">
                                   <span role="button" class="input-group-text bg-transparent text-primary py-3">
                                       <i class="fa fa-search"></i>
@@ -148,7 +148,7 @@
                   </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12 pb-1"
-              *ngFor="let product of products| paginate : { itemsPerPage: 6, currentPage: pagination, totalItems: allProducts }">
+              *ngFor="let product of products | paginate : { itemsPerPage: 6, currentPage: pagination, totalItems: allProducts }">
                   <div class="card product-item border-0 mb-4">
                       <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
                           <img class="img-fluid w-100" [src]="'../../../assets/images/product/' + product.image + '.jpg'" alt="{{ product.name}}">
